// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlanSwitcher Component - Google Analytics View Plan - Google Analytics 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mx-4 w-[268px] hidden md:block"
      >
        <div
          class="rich-dropdown"
        >
          <div
            class="flex flex-col switch-filter default"
            tabindex="1"
          >
            <div>
              <div
                class="flex flex-row px-4 py-2 items-center justify-between"
              >
                <div
                  class="flex flex-col max-w-[90%]"
                >
                  <p
                    class="body-2 app-base-font-color"
                    style="display: block; max-width: 100%;"
                  >
                    View Plan:
                  </p>
                  <p
                    class="body-1 font-bold text-ellipsis overflow-hidden whitespace-nowrap"
                    style="display: block; max-width: 100%;"
                  >
                    BlueCross BlueShield of Tennessee
                  </p>
                </div>
                <img
                  alt=""
                  class="size-5 head-icon m-[4px]"
                  data-nimg="1"
                  decoding="async"
                  height="40"
                  loading="lazy"
                  src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                  srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                  style="color: transparent;"
                  width="40"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mx-4 w-[268px] hidden md:block"
    >
      <div
        class="rich-dropdown"
      >
        <div
          class="flex flex-col switch-filter default"
          tabindex="1"
        >
          <div>
            <div
              class="flex flex-row px-4 py-2 items-center justify-between"
            >
              <div
                class="flex flex-col max-w-[90%]"
              >
                <p
                  class="body-2 app-base-font-color"
                  style="display: block; max-width: 100%;"
                >
                  View Plan:
                </p>
                <p
                  class="body-1 font-bold text-ellipsis overflow-hidden whitespace-nowrap"
                  style="display: block; max-width: 100%;"
                >
                  BlueCross BlueShield of Tennessee
                </p>
              </div>
              <img
                alt=""
                class="size-5 head-icon m-[4px]"
                data-nimg="1"
                decoding="async"
                height="40"
                loading="lazy"
                src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                style="color: transparent;"
                width="40"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PlanSwitcher Component - Google Analytics View Plan - Google Analytics 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mx-4 w-[268px] hidden md:block"
      >
        <div
          class="rich-dropdown"
        >
          <div
            class="flex flex-col switch-filter default"
            tabindex="1"
          >
            <div>
              <div
                class="flex flex-row px-4 py-2 items-center justify-between"
              >
                <div
                  class="flex flex-col max-w-[90%]"
                >
                  <p
                    class="body-2 app-base-font-color"
                    style="display: block; max-width: 100%;"
                  >
                    View Plan:
                  </p>
                  <p
                    class="body-1 font-bold text-ellipsis overflow-hidden whitespace-nowrap"
                    style="display: block; max-width: 100%;"
                  >
                    Tennessee Valley Authority
                  </p>
                </div>
                <img
                  alt=""
                  class="size-5 head-icon m-[4px]"
                  data-nimg="1"
                  decoding="async"
                  height="40"
                  loading="lazy"
                  src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                  srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                  style="color: transparent;"
                  width="40"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mx-4 w-[268px] hidden md:block"
    >
      <div
        class="rich-dropdown"
      >
        <div
          class="flex flex-col switch-filter default"
          tabindex="1"
        >
          <div>
            <div
              class="flex flex-row px-4 py-2 items-center justify-between"
            >
              <div
                class="flex flex-col max-w-[90%]"
              >
                <p
                  class="body-2 app-base-font-color"
                  style="display: block; max-width: 100%;"
                >
                  View Plan:
                </p>
                <p
                  class="body-1 font-bold text-ellipsis overflow-hidden whitespace-nowrap"
                  style="display: block; max-width: 100%;"
                >
                  Tennessee Valley Authority
                </p>
              </div>
              <img
                alt=""
                class="size-5 head-icon m-[4px]"
                data-nimg="1"
                decoding="async"
                height="40"
                loading="lazy"
                src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                style="color: transparent;"
                width="40"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
